tests/ui/g-role-out-of-range.stderr
error[E0080]: evaluation panicked: role index must be < 16
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<16, 0, hibana::g::Msg<1, ()>, 0>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |             panic!("role index must be < 16");
  |             --------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= crate::global::ROLE_DOMAIN_SIZE as u8 {
  | |             panic!("role index must be < 16");
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<16, 0, Msg<1, ()>, 0>`
 --> tests/ui/g-role-out-of-range.rs:4:13
  |
4 |     let _ = g::send::<16, 0, g::Msg<1, ()>, 0>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
